// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Stat > renders big variant 1`] = `
<DocumentFragment>
  <div
    class="bg-surface flex flex-col gap-2 px-7 py-6"
  >
    <span
      class="font-mono text-[10px] tracking-[0.1em] uppercase text-text-faint"
    >
      Death rate
    </span>
    <div
      class="flex items-baseline gap-1.5"
    >
      <div
        class="font-display tracking-display tabular-nums leading-[0.95] text-[56px] text-text"
      >
        1.234
      </div>
      <div
        class="font-mono tabular-nums text-text-dim text-[22px]"
      >
        %
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stat > renders label, value and unit 1`] = `
<DocumentFragment>
  <div
    class="bg-surface flex flex-col gap-2 px-7 py-6"
  >
    <span
      class="font-mono text-[10px] tracking-[0.1em] uppercase text-text-faint"
    >
      Death rate
    </span>
    <div
      class="flex items-baseline gap-1.5"
    >
      <div
        class="font-display tracking-display tabular-nums leading-[0.95] text-[36px] text-text"
      >
        1.234
      </div>
      <div
        class="font-mono tabular-nums text-text-dim text-[16px]"
      >
        %
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stat > renders with sub 1`] = `
<DocumentFragment>
  <div
    class="bg-surface flex flex-col gap-2 px-7 py-6"
  >
    <span
      class="font-mono text-[10px] tracking-[0.1em] uppercase text-text-faint"
    >
      Total deaths
    </span>
    <div
      class="flex items-baseline gap-1.5"
    >
      <div
        class="font-display tracking-display tabular-nums leading-[0.95] text-[36px] text-text"
      >
        673,201
      </div>
    </div>
    <div
      class="font-mono text-text-faint text-[11.5px] tracking-[0.05em]"
    >
      vs avg 612,830
    </div>
  </div>
</DocumentFragment>
`;
